# rust_externalC2

./: .gitignore  README.md  TRANSPORT_DEVELOPMENT_WORKFLOW.md
client/: Cargo.toml
client/src/: beacon.rs  config.rs  main.rs  utils.rs
client/src/transport/: mod.rs  transport_s3.rs
client/src/transports/: mod.rs  transport_blob.rs  transport_s3.rs
server/: config.py  external_c2_server.py
server/configureStage/: __init__.py
server/establishedSession/: __init__.py
server/utils/: commonUtils.py
server/utils/encoders/: encoder_b64url.py
server/utils/transports/: transport_blob.py  transport_s3.py
