[package]
name    = "rust_external_c2"
version = "0.1.0"
edition = "2021"

# Configuration:
#   mode:     "stager" or "stagless"
#   transport: "transport_s3" or "transport_blob"
# Build with: cargo build --release
[features]
default = ["stager", "transport_blob"]
stagless = []
stager = []
transport_s3 = []
transport_blob = []

[dependencies]
rust-s3 = "0.35"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
base64 = "0.22"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
]
